2015-12-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_crop.m: New.

	* Mscripts_database/l1b_frequency.m: New.

	* l1b_demo.m: A temporary script for testing.

	* Mscripts_qsystem/q2_set_path.m:
	* Mscripts_qsystem/q2_init.m: Adopted to removed folder.

	* Mscripts_offline: Removed this empty folder.

2015-12-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_sensor_parts.m (q2_arts_sensor_parts):
	* Mscripts_arts/q2_artscfile_sensor.m (q2_artscfile_sensor): Added
	handling of F_GRID_NFILL.

	* .gitignore: Added.

	* Settings/p_std.m (p_std): Made HITRAN frequency range a bit narrower.

	* Settings/o_std.m: Added frequency limits to most ABS_SPECIES,
	and some fine tuning of abs table variables. Added O.F_GRID_NFILL.

	* Mscripts_qsystem/q2_pgrid.m: Changed to 400 m spacing for p_grid.

2015-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_y.m: The function can now take ATM as
	input argument.

	* Mscripts_arts/q2_artscfile_full.m (cfile_abscalc_basics):
	Added handling of C.SPECTRO_FOLDER and C.SPECTRO_FOLDER2

	* Mscripts_precalc/q2_precalc_abslookup.m: Added handling of
	P.SPECTRO_FOLDER and P.SPECTRO_FOLDER2. Now also checks that an
	exist file is not overwritten.

	* Settings/p_std.m: Added SPECTRO_FOLDER and SPECTRO_FOLDER2.

2015-09-10  Joakim Möller <joakim.moller@molflow.com>
    * Added start scripts to start the official matlab image and
    the web_api server with test database. To start the services:
        $ docker-compose up
        $ ./matlab

2015-08-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Added some documentation. Pre-calculations and simulation of
	spectra (by q2_arts_y) now seem to work.

2015-08-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* A re-start after the summer. Quite some reorganisation, such as
	now storing precaluclted data outside the Qsmr folder structure.
