@@ -8,47 +8,27 @@
 %   top function
 %     cu = onCleanup( @()delete_tmpfolder( R.WORK_FOLDER ) );
 %
-% FORMAT   [R,r] = q2_create_workfolder(Q,R)
+% FORMAT   R = q2_create_workfolder(Q,R)
 %        
 % IN    Q   A Q structure.
 %       R   Original R structure.
 % OUT   R   Modified R structure.
-%       r   A report string. Empty if all OK.
 
 % 2015-05-18   Patrick Eriksson.
 
-function [R,r] = q2_create_workfolder(Q,R)
-
-  
-%- Init error reporting
-%
-r = [];
-mfile = upper( mfilename );
-
+function R = q2_create_workfolder(Q,R)
 
 %- R can not already contain WORK_FOLDER
 %
 if isfield( R, 'WORK_FOLDER' )
-  r = 'R holds already a WORK_FOLDER.';
-  if nargout > 1
-    r = sprintf( '%s: %s', mfile, r );
-    return;
-  else
-    error( r );
-  end
+  error( 'R holds already a WORK_FOLDER.' );
 end
 
 
 %- Is WORK_AREA set correctly?
 %
 if ~exist( Q.WORK_AREA, 'dir' )
-  r = 'WORK_AREA is not a valid/existing folder.';
-  if nargout > 1
-    r = sprintf( '%s: %s', mfile, r );
-    return;
-  else
-    error( r );
-  end
+  error( 'WORK_AREA is not a valid/existing folder.' );
 end
 
 
